--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
 ---------------------------------------------------------------------------------------------------
-Version: 1.0.
-Date: Oct  2018
+Version: 1.0.172
+Date: Oct 20 2018
 	- Creation
 ---------------------------------------------------------------------------------------------------
