--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,53 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.105.1
+Date: Apr 28 2021
+	- 1.1 Update
+---------------------------------------------------------------------------------------------------
+Version: 1.18.24
+Date: Nov 15 2020
+	- Moved biome color code to Dragon Industries
+---------------------------------------------------------------------------------------------------
+Version: 1.18.18
+Date: Aug 10 2020
+	- Added option to use entity lights again instead of script lights, to further improve FPS at the cost of risk of straggler entities
+	- Added fixes for custom units that should not be assigned lights
+	- Converted old light entities from rail chain signals to lamps to avoid weird interactions with rails that were a problem in 0.16
+---------------------------------------------------------------------------------------------------
+Version: 1.18.6
+Date: Jun 15 2020
+	- Added light reloading system to reduce FPS drops from orphaned lights accumulating on large maps
+---------------------------------------------------------------------------------------------------
+Version: 1.18.5
+Date: Jun 11 2020
+	- Added some missing event handlers
+	- Added an item for the glowing trees to allow them to be replanted
+---------------------------------------------------------------------------------------------------
+Version: 1.18.1
+Date: May 29 2020
+	- Update to 0.18
+---------------------------------------------------------------------------------------------------
+Version: 1.17.12
+Date: Jun 17 2019
+	- Fixed collisions on glowing bushes
+	- Fixed AlienBiomes detection
+---------------------------------------------------------------------------------------------------
+Version: 1.17.12
+Date: Jun 17 2019
+	- Made biter glow size dynamic with physical size
+	- Improved mod compatibility of biter color caching
+	- Added plant density option
+---------------------------------------------------------------------------------------------------
+Version: 1.17.6
+Date: Jun 6 2019
+	- Added glowing biters
+	- Improved entity handling to reduce straggler entities and unintended side effects
+	- Moved shared code to Dragon Industries
+	- Switched lights to LuaRendering script system
+---------------------------------------------------------------------------------------------------
+Version: 1.17.1
+Date: Mar 23 2019
+	- Update to 0.17
+---------------------------------------------------------------------------------------------------
 Version: 1.0.172
 Date: Oct 20 2018
 	- Creation
