--- a/changelog.txt
+++ b/changelog.txt
@@ -49,6 +49,7 @@ Date: Mar 23 2019
 	- Update to 0.17
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.172
-Date: Oct 20 2018
+Game: 0.16
+Date: Oct 13 2018
 	- Creation
 ---------------------------------------------------------------------------------------------------
